# oop2024_lab1

./: CMakeLists.txt  README.md  doxygenConfig  lab1.cpp  lab1.h  main.cpp
tests/: CMakeLists.txt  testing.cpp
